# avito_agent_load

./: .env.example  .gitignore  CLAUDE.md  README.md  avito_err.json  avito_err2.json  pyproject.toml  ref_dump.txt  rep2.txt
avito-descriptions/: 01-alfacool-apus.txt  02-expertair-cyclone-dc-inverter.txt  03-expertair-proff-dc-inverter.txt  04-expertair-hard.txt  05-expertair-progress.txt  06-funai-akoya-inverter.txt  07-funai-akoya-nero-inverter.txt  08-funai-daijin-inverter.txt  09-funai-emperor-smart-eye.txt  10-funai-emperor-up-smart-eye.txt  11-funai-kadzoku-inverter-2024.txt  12-funai-kagami-inverter.txt  13-funai-shogun-inverter-2024.txt  14-funai-sensei-2-inverter.txt  15-funai-daijin.txt  16-funai-kadzoku-2025.txt  17-funai-kagami.txt  18-funai-sensei-2.txt  19-funai-kadzoku-inverter-2025.txt  20-funai-sensei-2025.txt  21-funai-sensei-nero-2.txt  22-funai-shogun-2025.txt  23-funai-shogun-2026.txt  24-funai-camomiru.txt  25-high-life-comfort-class-inverter.txt  26-high-life-priority-class-2-inverter.txt  27-high-life-priority-class-2.txt  28-hisense-black-crystal-classic-a.txt  29-hisense-expert-pro-dc-inverter-wifi.txt  30-hisense-heavy-dc-inverter.txt  31-hisense-air-sensation-superior.txt  32-hisense-city-2-dc-inverter.txt  33-hisense-city-dc-inverter-7-18.txt  34-hisense-city-dc-inverter-13.txt  35-hisense-smart-dc-inverter.txt  36-hisense-vision-pro-2-carbon.txt  README.md  manifest.json  sel-ac-electric-ace-07.txt  sel-ac-electric-ace-09.txt  (+40 more)
config/: card_modes.json  config.yaml
deploy/: avito-bridge.service  avito-bridge.timer  nginx-feed.conf
(+57 files in other folders)
